force-app/main/default/objects/Contact/fields/Drivers_Licence__c.field-meta.xml
<CustomField>
    <fullName>Drivers_Licence__c</fullName>
    <label>Drivers Licence</label>
    <length>80</length>
    <type>Text</type>
</CustomField>