force-app/main/default/objects/Contact/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Payable Contact</label>
    <type>Checkbox</type>
</CustomField>