force-app/main/default/objects/Contact/validationRules/VR_CON01_FirstName_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CON01_FirstName_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName) &amp;&amp;  ISPICKVAL(Contact_Type__c , &#39;Contract Manager&#39;)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is mandatory for Contract Manager Contact</errorMessage>
</ValidationRule>