force-app/main/default/objects/Contact/validationRules/VR_CON02_ServiceContact_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CON02_ServiceContact_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Contact_Type__c, &#39;Service Contact&#39;)  &amp;&amp; ISBLANK( Phone ) &amp;&amp;  ISBLANK( MobilePhone )</errorConditionFormula>
    <errorMessage>One phone number is mandatory for a Service Contact</errorMessage>
</ValidationRule>