force-app/main/default/objects/Contact/validationRules/VR_CON03_FinanceContactPhoneOrEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CON03_FinanceContactPhoneOrEmail</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Contact_Type__c , &#39;Finance Contact&#39;) &amp;&amp;  ISBLANK(Email) &amp;&amp; ISBLANK(  MobilePhone  ) &amp;&amp; ISBLANK( Phone )</errorConditionFormula>
    <errorMessage>For Finance Contact at least 1 phone or email needs to be provided</errorMessage>
</ValidationRule>