force-app/main/default/objects/Contact/validationRules/VR_CON04_ContractManagerPhoneOrEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CON04_ContractManagerPhoneOrEmail</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Contact_Type__c , &#39;Contract Manager&#39;) &amp;&amp;  ISBLANK(Email) &amp;&amp; ISBLANK(  MobilePhone  ) &amp;&amp; ISBLANK( Phone )</errorConditionFormula>
    <errorMessage>For Contract Manager at least 1 phone or email needs to be provided</errorMessage>
</ValidationRule>