force-app/main/default/objects/Contact/validationRules/VR_CON09_Contract_Mobile.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CON09_Contract_Mobile</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(    MobilePhone     ) &amp;&amp; 
ISPICKVAL( Contact_Type__c , &#39;Contract Manager&#39;)</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>This field is required when Contract Manager has been selected</errorMessage>
</ValidationRule>