force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT.NAME</columns>
    <columns>Contact_Type__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Primary__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>